--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -20,6 +20,7 @@
     "import numpy as np\n",
     "from omegaconf import OmegaConf\n",
     "import models\n",
+    "import modelConv2d\n",
     "import loss_func\n",
     "import train\n",
     "import loader\n",
@@ -1351,7 +1352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
