experiments notebook extended multiple models

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visual Test"
+    "#### Visual Test"
    ]
   },
   {
@@ -1333,6 +1333,55 @@
    ],
    "source": [
     "vu.CompareLatent(modelAE, visual_loader)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Conv2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cpu\n",
+      "epoch: 2 \t training loss: 0.13853664113127667 \t validation loss: 0.12691617260376611\n",
+      "epoch: 4 \t training loss: 0.09852955166412436 \t validation loss: 0.0897314337392648\n",
+      "epoch: 6 \t training loss: 0.06866462399130283 \t validation loss: 0.062237998470664024\n",
+      "epoch: 8 \t training loss: 0.047146976803955826 \t validation loss: 0.04262214402357737\n",
+      "epoch: 10 \t training loss: 0.032222753471654396 \t validation loss: 0.029163331724703312\n",
+      "epoch: 12 \t training loss: 0.022294027325899704 \t validation loss: 0.020314236792425316\n",
+      "epoch: 14 \t training loss: 0.015978454733672348 \t validation loss: 0.014755765131364265\n",
+      "epoch: 16 \t training loss: 0.01214738344044789 \t validation loss: 0.01142825356995066\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "modelAE = modelConv2d.AE(dt=1/30, initw=True)\n",
+    "modelAE, train_losses, val_losses, accuracy_list  = train.train(modelAE, train_dataloader, test_dataloader, 'GNNSimple')"
    ]
   }
  ],
