--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -780,7 +780,7 @@
    ],
    "source": [
     "con2dDecoder = modelConv2d.FullDecoder(initw=True)\n",
-    "con2dDecoder, train_losses, val_losses, accuracy_list  = train.train(con2dDecoder, train_dataloader, test_dataloader, 'con2dDecoder', loss_name='decoder_loss')"
+    "con2dDecoder, train_losses, val_losses, accuracy_list  = train.train(con2dDecoder, train_dataloader, test_dataloader, 'con2dDecoder', loss_name='Focal_batch_loss')"
    ]
   },
   {
@@ -835,36 +835,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device: cpu\n"
+      "<class 'torch.Tensor'>\n",
+      "torch.float32\n",
+      "Using device: cpu\n",
+      "x: torch.Size([32, 12, 61, 121])  d3: torch.Size([1, 12, 32, 62])\n"
      ]
     },
     {
      "ename": "RuntimeError",
-     "evalue": "expected scalar type Byte but found Float",
+     "evalue": "Sizes of tensors must match except in dimension 1. Expected size 122 but got size 32 for tensor number 1 in the list.",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[20], line 12\u001b[0m\n\u001b[1;32m      8\u001b[0m template \u001b[39m=\u001b[39m transform(template)\u001b[39m.\u001b[39mto(device)\n\u001b[1;32m     11\u001b[0m ConvAE \u001b[39m=\u001b[39m modelConv2d\u001b[39m.\u001b[39mConvAE(template\u001b[39m=\u001b[39mtemplate, initw\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m---> 12\u001b[0m ConvAE, train_losses, val_losses, accuracy_list  \u001b[39m=\u001b[39m train\u001b[39m.\u001b[39;49mtrain(ConvAE, train_dataloader, test_dataloader, \u001b[39m'\u001b[39;49m\u001b[39mConvAE\u001b[39;49m\u001b[39m'\u001b[39;49m, loss_name\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mConvAE_decoder_loss\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "Cell \u001b[0;32mIn[48], line 19\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[39mprint\u001b[39m(template\u001b[39m.\u001b[39mdtype)\n\u001b[1;32m     18\u001b[0m ConvAE \u001b[39m=\u001b[39m modelConv2d\u001b[39m.\u001b[39mConvAE(template\u001b[39m=\u001b[39mtemplate, initw\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m---> 19\u001b[0m ConvAE, train_losses, val_losses, accuracy_list  \u001b[39m=\u001b[39m train\u001b[39m.\u001b[39;49mtrain(ConvAE, train_dataloader, test_dataloader, \u001b[39m'\u001b[39;49m\u001b[39mConvAE\u001b[39;49m\u001b[39m'\u001b[39;49m, loss_name\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mConvAE_decoder_loss\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
       "File \u001b[0;32m~/Documents/Repositories/Vphy/src/train.py:104\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(model, train_loader, val_loader, name, loss_name)\u001b[0m\n\u001b[1;32m    100\u001b[0m patience \u001b[39m=\u001b[39m \u001b[39m50\u001b[39m \u001b[39m# patience for early stopping\u001b[39;00m\n\u001b[1;32m    102\u001b[0m \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, num_epochs\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m):\n\u001b[1;32m    103\u001b[0m     \u001b[39m# Model training\u001b[39;00m\n\u001b[0;32m--> 104\u001b[0m     train_loss \u001b[39m=\u001b[39m train_epoch(model, train_loader, loss_fn,optimizer, device\u001b[39m=\u001b[39;49mdevice)\n\u001b[1;32m    105\u001b[0m     \u001b[39m# Model validation\u001b[39;00m\n\u001b[1;32m    106\u001b[0m     val_loss \u001b[39m=\u001b[39m evaluate_epoch(model, val_loader, loss_fn, device\u001b[39m=\u001b[39mdevice)\n",
       "File \u001b[0;32m~/Documents/Repositories/Vphy/src/train.py:38\u001b[0m, in \u001b[0;36mtrain_epoch\u001b[0;34m(model, loader, loss_fn, optimizer, device)\u001b[0m\n\u001b[1;32m     36\u001b[0m optimizer\u001b[39m.\u001b[39mzero_grad()\n\u001b[1;32m     37\u001b[0m \u001b[39m# Make predictions for this batch\u001b[39;00m\n\u001b[0;32m---> 38\u001b[0m outputs \u001b[39m=\u001b[39m model(x0)\n\u001b[1;32m     41\u001b[0m \u001b[39m# Compute the loss and its gradients\u001b[39;00m\n\u001b[1;32m     42\u001b[0m loss  \u001b[39m=\u001b[39m loss_fn(x0 , outputs ,x1 )\n",
       "File \u001b[0;32m~/Documents/Repositories/Vphy/.venv/lib/python3.10/site-packages/torch/nn/modules/module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1496\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1497\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1499\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1500\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1501\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1502\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
-      "File \u001b[0;32m~/Documents/Repositories/Vphy/src/modelConv2d.py:291\u001b[0m, in \u001b[0;36mConvAE.forward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m    289\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, x):\n\u001b[0;32m--> 291\u001b[0m   d1\u001b[39m=\u001b[39m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49md1(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtemplate)\n\u001b[1;32m    292\u001b[0m   d2\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39md2(d1)\n\u001b[1;32m    293\u001b[0m   d3\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39md3(d2)\n",
+      "File \u001b[0;32m~/Documents/Repositories/Vphy/src/modelConv2d.py:309\u001b[0m, in \u001b[0;36mConvAE.forward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m    302\u001b[0m x \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdecoder(x)\n\u001b[1;32m    304\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mx:\u001b[39m\u001b[39m\"\u001b[39m, x\u001b[39m.\u001b[39mshape,\u001b[39m\"\u001b[39m\u001b[39m d3:\u001b[39m\u001b[39m\"\u001b[39m, d3\u001b[39m.\u001b[39mshape)\n\u001b[0;32m--> 309\u001b[0m u3\u001b[39m=\u001b[39m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mu3(x,d3\u001b[39m.\u001b[39;49mrepeat(\u001b[39m32\u001b[39;49m,\u001b[39m1\u001b[39;49m,\u001b[39m1\u001b[39;49m,\u001b[39m1\u001b[39;49m) )\n\u001b[1;32m    310\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mu3:\u001b[39m\u001b[39m\"\u001b[39m, u3\u001b[39m.\u001b[39mshape,\u001b[39m\"\u001b[39m\u001b[39m d2:\u001b[39m\u001b[39m\"\u001b[39m, d2\u001b[39m.\u001b[39mshape)\n\u001b[1;32m    311\u001b[0m u2\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mu2(u3,d2\u001b[39m.\u001b[39mrepeat(\u001b[39m32\u001b[39m,\u001b[39m1\u001b[39m,\u001b[39m1\u001b[39m,\u001b[39m1\u001b[39m))\n",
       "File \u001b[0;32m~/Documents/Repositories/Vphy/.venv/lib/python3.10/site-packages/torch/nn/modules/module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1496\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1497\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1499\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1500\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1501\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1502\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
-      "File \u001b[0;32m~/Documents/Repositories/Vphy/src/modelConv2d.py:250\u001b[0m, in \u001b[0;36mDown.forward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m    248\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, x):\n\u001b[0;32m--> 250\u001b[0m   \u001b[39mreturn\u001b[39;00m  nn\u001b[39m.\u001b[39mMaxPool2d(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mconv(x))\n",
-      "File \u001b[0;32m~/Documents/Repositories/Vphy/.venv/lib/python3.10/site-packages/torch/nn/modules/module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1496\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1497\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1499\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1500\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1501\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1502\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
-      "File \u001b[0;32m~/Documents/Repositories/Vphy/.venv/lib/python3.10/site-packages/torch/nn/modules/container.py:217\u001b[0m, in \u001b[0;36mSequential.forward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m    215\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m):\n\u001b[1;32m    216\u001b[0m     \u001b[39mfor\u001b[39;00m module \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m:\n\u001b[0;32m--> 217\u001b[0m         \u001b[39minput\u001b[39m \u001b[39m=\u001b[39m module(\u001b[39minput\u001b[39;49m)\n\u001b[1;32m    218\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39minput\u001b[39m\n",
-      "File \u001b[0;32m~/Documents/Repositories/Vphy/.venv/lib/python3.10/site-packages/torch/nn/modules/module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1496\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1497\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1499\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1500\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1501\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1502\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
-      "File \u001b[0;32m~/Documents/Repositories/Vphy/.venv/lib/python3.10/site-packages/torch/nn/modules/conv.py:463\u001b[0m, in \u001b[0;36mConv2d.forward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m    462\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tensor:\n\u001b[0;32m--> 463\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_conv_forward(\u001b[39minput\u001b[39;49m, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mweight, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbias)\n",
-      "File \u001b[0;32m~/Documents/Repositories/Vphy/.venv/lib/python3.10/site-packages/torch/nn/modules/conv.py:459\u001b[0m, in \u001b[0;36mConv2d._conv_forward\u001b[0;34m(self, input, weight, bias)\u001b[0m\n\u001b[1;32m    455\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpadding_mode \u001b[39m!=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mzeros\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m    456\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39mconv2d(F\u001b[39m.\u001b[39mpad(\u001b[39minput\u001b[39m, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reversed_padding_repeated_twice, mode\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpadding_mode),\n\u001b[1;32m    457\u001b[0m                     weight, bias, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstride,\n\u001b[1;32m    458\u001b[0m                     _pair(\u001b[39m0\u001b[39m), \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdilation, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mgroups)\n\u001b[0;32m--> 459\u001b[0m \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39;49mconv2d(\u001b[39minput\u001b[39;49m, weight, bias, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mstride,\n\u001b[1;32m    460\u001b[0m                 \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mpadding, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdilation, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mgroups)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: expected scalar type Byte but found Float"
+      "File \u001b[0;32m~/Documents/Repositories/Vphy/src/modelConv2d.py:269\u001b[0m, in \u001b[0;36mUp.forward\u001b[0;34m(self, x, template)\u001b[0m\n\u001b[1;32m    266\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, x, template):\n\u001b[1;32m    268\u001b[0m   xu \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mUpscale(x)\n\u001b[0;32m--> 269\u001b[0m   x_cat \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mcat([xu, template], dim\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m)\n\u001b[1;32m    270\u001b[0m   x \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrelu(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mconv(x_cat))\n\u001b[1;32m    271\u001b[0m   x \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrelu(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mconv_same(x))\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Sizes of tensors must match except in dimension 1. Expected size 122 but got size 32 for tensor number 1 in the list."
      ]
     }
    ],
@@ -872,12 +870,19 @@
     "\n",
     "import torchvision.transforms as transforms\n",
     "\n",
+    "train_dataloader, test_dataloader, train_x, val_x  = loader.getLoader(a, type = \"Dataset_decoder\")\n",
+    "visual_loader= loader.getLoader(a, split=False, type = \"Dataset_decoder\")\n",
+    "\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "transform = transforms.Compose([\n",
     "    transforms.PILToTensor()\n",
     "])\n",
+    "transform =  transforms.ToTensor()\n",
     "template = genData.create_pendulum_image(0)\n",
     "template = transform(template).to(device)\n",
+    "\n",
+    "print(type(template))\n",
+    "print(template.dtype)\n",
     "\n",
     "\n",
     "ConvAE = modelConv2d.ConvAE(template=template, initw=True)\n",
@@ -918,6 +923,33 @@
    ],
    "source": [
     "loader.get_template()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1, 2, 3]) torch.Size([3])\n",
+      "tensor([[1, 2, 3]]) torch.Size([1, 3])\n",
+      "tensor([[1, 2, 3, 1, 2, 3],\n",
+      "        [1, 2, 3, 1, 2, 3],\n",
+      "        [1, 2, 3, 1, 2, 3],\n",
+      "        [1, 2, 3, 1, 2, 3]]) torch.Size([4, 6])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.tensor([1, 2, 3])\n",
+    "print(x, x.shape)\n",
+    "x = x.unsqueeze(0)\n",
+    "print(x, x.shape)\n",
+    "x = x.repeat(4,2)\n",
+    "print(x, x.shape)"
    ]
   }
  ],
