organize files add unet model

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -10,18 +10,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'modelConv2d' from 'src' (unknown location)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m/home/alejandro/Documents/Repositories/Vphy/experiments.ipynb Cell 2\u001b[0m line \u001b[0;36m7\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/alejandro/Documents/Repositories/Vphy/experiments.ipynb#W1sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39momegaconf\u001b[39;00m \u001b[39mimport\u001b[39;00m OmegaConf\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/alejandro/Documents/Repositories/Vphy/experiments.ipynb#W1sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msrc\u001b[39;00m \u001b[39mimport\u001b[39;00m models\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/alejandro/Documents/Repositories/Vphy/experiments.ipynb#W1sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msrc\u001b[39;00m \u001b[39mimport\u001b[39;00m modelConv2d\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/alejandro/Documents/Repositories/Vphy/experiments.ipynb#W1sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msrc\u001b[39;00m \u001b[39mimport\u001b[39;00m modelineal\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/alejandro/Documents/Repositories/Vphy/experiments.ipynb#W1sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msrc\u001b[39;00m \u001b[39mimport\u001b[39;00m loss_func\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'modelConv2d' from 'src' (unknown location)"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
     "import numpy as np\n",
     "from omegaconf import OmegaConf\n",
-    "from src import models\n",
-    "from src import modelConv2d\n",
-    "from src import modelineal\n",
+    "from src.models import models\n",
+    "from src.models import modelConv2d\n",
+    "from src.models import modelineal\n",
     "from src import loss_func\n",
     "from src import train\n",
     "from src import loader\n",
@@ -950,6 +970,38 @@
     "print(x, x.shape)\n",
     "x = x.repeat(4,2)\n",
     "print(x, x.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1152, 1152)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PIL import Image\n",
+    "\n",
+    "from PIL.TiffTags import TAGS\n",
+    "import numpy as np\n",
+    "\n",
+    "with Image.open('488pts.tif') as img:\n",
+    "\n",
+    "    img_np = np.array(img)\n",
+    "    print(img_np.shape)"
    ]
   }
  ],
