add time and date to exp wnb

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -1467,7 +1467,10 @@
      "output_type": "stream",
      "text": [
       "epoch: 10 \t training loss: 0.01170665645243033 \t validation loss: 0.003811810864135623\n",
-      "epoch: 20 \t training loss: 0.010808563851953848 \t validation loss: 0.0035024742683162913\n"
+      "epoch: 20 \t training loss: 0.010808563851953848 \t validation loss: 0.0035024742683162913\n",
+      "epoch: 30 \t training loss: 0.010652804382793282 \t validation loss: 0.00471408836892806\n",
+      "epoch: 40 \t training loss: 0.010357726830989122 \t validation loss: 0.0035664012684719637\n",
+      "epoch: 50 \t training loss: 0.009964966113962557 \t validation loss: 0.003670727295684628\n"
      ]
     }
    ],
