test experiments optimize decoder

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -10,24 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x1824f206ab0>"
+       "<torch._C.Generator at 0x7fc2609a9a30>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -268,14 +260,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device: cuda\n"
+      "Using device: cpu\n"
      ]
     },
     {
@@ -306,7 +298,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>c:\\Users\\aleja\\Documents\\TUDelft\\Repository\\Vphys\\wandb\\run-20240220_215626-iogg272c</code>"
+       "Run data is saved locally in <code>/Users/Alejandro/Documents/PhD/Repositories/Mine/Vphy/wandb/run-20240221_130036-4wmrn4li</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -318,7 +310,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/alejandro_c/Vphysics-Project/runs/iogg272c' target=\"_blank\">exp_20_02_24_21</a></strong> to <a href='https://wandb.ai/alejandro_c/Vphysics-Project' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+       "Syncing run <strong><a href='https://wandb.ai/alejandro_c/Vphysics-Project/runs/4wmrn4li' target=\"_blank\">exp_21_02_24_13</a></strong> to <a href='https://wandb.ai/alejandro_c/Vphysics-Project' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -342,7 +334,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/alejandro_c/Vphysics-Project/runs/iogg272c' target=\"_blank\">https://wandb.ai/alejandro_c/Vphysics-Project/runs/iogg272c</a>"
+       " View run at <a href='https://wandb.ai/alejandro_c/Vphysics-Project/runs/4wmrn4li' target=\"_blank\">https://wandb.ai/alejandro_c/Vphysics-Project/runs/4wmrn4li</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -355,16 +347,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 10 \t training loss: 0.016329343765974044 \t validation loss: 0.060922459770853706\n",
-      "epoch: 20 \t training loss: 0.016250603832304478 \t validation loss: 0.06653016891617042\n",
-      "epoch: 30 \t training loss: 0.01614837449043989 \t validation loss: 0.0891141748199096\n",
-      "epoch: 40 \t training loss: 0.01607586458325386 \t validation loss: 0.11899616282719833\n",
-      "epoch: 50 \t training loss: 0.016012703087180852 \t validation loss: 0.1437986816924352\n",
-      "epoch: 60 \t training loss: 0.01595319341868162 \t validation loss: 0.16652072392977202\n",
-      "epoch: 70 \t training loss: 0.01588723376393318 \t validation loss: 0.18819598481059074\n",
-      "epoch: 80 \t training loss: 0.015830364674329758 \t validation loss: 0.22084667504980013\n",
-      "epoch: 90 \t training loss: 0.015766251143068077 \t validation loss: 0.25579797763090867\n",
-      "epoch: 100 \t training loss: 0.01570381298661232 \t validation loss: 0.29478635495671857\n"
+      "epoch: 10 \t training loss: 0.12860868483781815 \t validation loss: 2.3200413447159987\n",
+      "epoch: 20 \t training loss: 0.12378364890813827 \t validation loss: 0.334190241419352\n",
+      "epoch: 30 \t training loss: 0.12319380760192872 \t validation loss: 0.6256152781156393\n",
+      "epoch: 40 \t training loss: 0.12328182816505433 \t validation loss: 0.7308985820183387\n",
+      "epoch: 50 \t training loss: 0.12298592284321785 \t validation loss: 0.7522957279131963\n",
+      "epoch: 60 \t training loss: 0.12283350586891174 \t validation loss: 0.8455075529905466\n",
+      "epoch: 70 \t training loss: 0.12280716866254807 \t validation loss: 2.3150884830034695\n",
+      "epoch: 80 \t training loss: 0.12223086535930633 \t validation loss: 0.4071392623277811\n",
+      "epoch: 90 \t training loss: 0.12232485979795456 \t validation loss: 0.34366657183720517\n",
+      "epoch: 100 \t training loss: 0.1220664057135582 \t validation loss: 0.21108240691515115\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "wandb: WARNING Source type is set to 'repo' but some required information is missing from the environment. A job will not be created from this run. See https://docs.wandb.ai/guides/launch/create-job\n"
      ]
     },
     {
@@ -375,7 +374,7 @@
        "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
        "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
        "    </style>\n",
-       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>train_loss</td><td>█▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁</td></tr><tr><td>validation_loss</td><td>▁▃▂▂▂▂▂▂▂▂▃▃▃▃▃▄▄▄▄▄▄▄▅▅▅▅▅▅▅▆▆▆▆▆▇▇▇▇██</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>train_loss</td><td>0.0157</td></tr><tr><td>validation_loss</td><td>0.29479</td></tr></table><br/></div></div>"
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>train_loss</td><td>█▂▂▂▂▂▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁</td></tr><tr><td>validation_loss</td><td>▁█▂▆▁▁▁▁▂▂▃▃▃▅▅▄▃▃▃▅▃▃▃▄▄▃▃▃▂▂▂▂▄▂▂▂▂▂▂▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>train_loss</td><td>0.12207</td></tr><tr><td>validation_loss</td><td>0.21108</td></tr></table><br/></div></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -387,7 +386,7 @@
     {
      "data": {
       "text/html": [
-       " View run <strong style=\"color:#cdcd00\">exp_20_02_24_21</strong> at: <a href='https://wandb.ai/alejandro_c/Vphysics-Project/runs/iogg272c' target=\"_blank\">https://wandb.ai/alejandro_c/Vphysics-Project/runs/iogg272c</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+       " View run <strong style=\"color:#cdcd00\">exp_21_02_24_13</strong> at: <a href='https://wandb.ai/alejandro_c/Vphysics-Project/runs/4wmrn4li' target=\"_blank\">https://wandb.ai/alejandro_c/Vphysics-Project/runs/4wmrn4li</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -399,7 +398,7 @@
     {
      "data": {
       "text/html": [
-       "Find logs at: <code>.\\wandb\\run-20240220_215626-iogg272c\\logs</code>"
+       "Find logs at: <code>./wandb/run-20240221_130036-4wmrn4li/logs</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -421,12 +420,12 @@
    "source": [
     "train_dataloader, test_dataloader, train_x, val_x  = loader.getLoader_decoder(a, type = \"Motion\")\n",
     "linearDecoder = decoders.mlp(initw=True)\n",
-    "linearDecoder, train_losses, val_losses, accuracy_list  = train.train(linearDecoder, train_dataloader, test_dataloader, '../Results/linearDecoder', loss_name='decoder_loss')"
+    "linearDecoder, train_losses, val_losses, accuracy_list  = train.train(linearDecoder, train_dataloader, test_dataloader, '../Results/Motion_Decoder', loss_name='decoder_loss')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1699,7 +1698,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   },
   "orig_nbformat": 4
  },
