--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -2132,7 +2132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -2141,61 +2141,6 @@
      "text": [
       "Using device: cpu\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "Finishing last run (ID:gy957tpr) before initializing another..."
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "wandb: WARNING Source type is set to 'repo' but some required information is missing from the environment. A job will not be created from this run. See https://docs.wandb.ai/guides/launch/create-job\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run <strong style=\"color:#cdcd00\">exp_EndPhys_15_03_24_13</strong> at: <a href='https://wandb.ai/alejandro_c/Vphysics-Project/runs/gy957tpr' target=\"_blank\">https://wandb.ai/alejandro_c/Vphysics-Project/runs/gy957tpr</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Find logs at: <code>./wandb/run-20240315_134952-gy957tpr/logs</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Successfully finished last run (ID:gy957tpr). Initializing new run:<br/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     },
     {
      "data": {
@@ -2225,7 +2170,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>/Users/Alejandro/Documents/PhD/Repositories/Mine/Vphy/wandb/run-20240315_135017-oc4yx5f5</code>"
+       "Run data is saved locally in <code>/Users/Alejandro/Documents/PhD/Repositories/Mine/Vphy/wandb/run-20240315_143551-jgbx7suc</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2237,7 +2182,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/alejandro_c/Vphysics-Project/runs/oc4yx5f5' target=\"_blank\">exp_EndPhys_15_03_24_13</a></strong> to <a href='https://wandb.ai/alejandro_c/Vphysics-Project' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+       "Syncing run <strong><a href='https://wandb.ai/alejandro_c/Vphysics-Project/runs/jgbx7suc' target=\"_blank\">exp_EndPhys_15_03_24_14</a></strong> to <a href='https://wandb.ai/alejandro_c/Vphysics-Project' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2261,7 +2206,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/alejandro_c/Vphysics-Project/runs/oc4yx5f5' target=\"_blank\">https://wandb.ai/alejandro_c/Vphysics-Project/runs/oc4yx5f5</a>"
+       " View run at <a href='https://wandb.ai/alejandro_c/Vphysics-Project/runs/jgbx7suc' target=\"_blank\">https://wandb.ai/alejandro_c/Vphysics-Project/runs/jgbx7suc</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2274,8 +2219,83 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 10 \t training loss: 1.0541456455161213 \t validation loss: 6.927060047785441\n"
+      "epoch: 10 \t training loss: 0.11099084028747944 \t validation loss: 5.826135949293772\n",
+      "epoch: 20 \t training loss: 0.09545143137071828 \t validation loss: 5.859777935345968\n",
+      "epoch: 30 \t training loss: 0.09110349226744868 \t validation loss: 5.860901172955831\n",
+      "epoch: 40 \t training loss: 0.09300445101948772 \t validation loss: 6.033600191275279\n",
+      "epoch: 50 \t training loss: 0.12047874248258558 \t validation loss: 5.868782027562459\n",
+      "epoch: 60 \t training loss: 0.10370404753732204 \t validation loss: 6.127106980482737\n",
+      "epoch: 70 \t training loss: 0.08184196565560393 \t validation loss: 6.067840961615245\n",
+      "epoch: 80 \t training loss: 0.09657052991466845 \t validation loss: 5.864679356416066\n",
+      "epoch: 90 \t training loss: 0.08147750772547113 \t validation loss: 5.877435362339019\n",
+      "epoch: 100 \t training loss: 0.09377852803791839 \t validation loss: 5.878034019470215\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "wandb: WARNING Source type is set to 'repo' but some required information is missing from the environment. A job will not be created from this run. See https://docs.wandb.ai/guides/launch/create-job\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
+       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
+       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
+       "    </style>\n",
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>alpha</td><td>▇▆▇▆▇▇▇▇▇▇▅▆▄▆█▇▅▆▅█▇▅▃▆▇▅▇▇▆▅▇▅▁█▇▆█▇▆▇</td></tr><tr><td>beta</td><td>▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁</td></tr><tr><td>train_loss</td><td>█▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁</td></tr><tr><td>validation_loss</td><td>█▂▄▂▁▁▁▁▁▁▂▁▁▁▁▂▂▂▂▂▁▂▁▁▁▁▁▂▁▂▂▁▂▁▁ ▂▁▁▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>alpha</td><td>3.85421</td></tr><tr><td>beta</td><td>1.0</td></tr><tr><td>train_loss</td><td>0.09378</td></tr><tr><td>validation_loss</td><td>5.87803</td></tr></table><br/></div></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run <strong style=\"color:#cdcd00\">exp_EndPhys_15_03_24_14</strong> at: <a href='https://wandb.ai/alejandro_c/Vphysics-Project/runs/jgbx7suc' target=\"_blank\">https://wandb.ai/alejandro_c/Vphysics-Project/runs/jgbx7suc</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>./wandb/run-20240315_143551-jgbx7suc/logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -2287,7 +2307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
