Model parametrizing equation

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,10 +24,10 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f82b09b9ab0>"
+       "<torch._C.Generator at 0x7fa5a8d09ab0>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2132,7 +2132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2170,7 +2170,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>/Users/Alejandro/Documents/PhD/Repositories/Mine/Vphy/wandb/run-20240315_143551-jgbx7suc</code>"
+       "Run data is saved locally in <code>/Users/Alejandro/Documents/PhD/Repositories/Mine/Vphy/wandb/run-20240318_140942-l9k17u17</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2182,7 +2182,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/alejandro_c/Vphysics-Project/runs/jgbx7suc' target=\"_blank\">exp_EndPhys_15_03_24_14</a></strong> to <a href='https://wandb.ai/alejandro_c/Vphysics-Project' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+       "Syncing run <strong><a href='https://wandb.ai/alejandro_c/Vphysics-Project/runs/l9k17u17' target=\"_blank\">exp_EndPhys_18_03_24_14</a></strong> to <a href='https://wandb.ai/alejandro_c/Vphysics-Project' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2206,7 +2206,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/alejandro_c/Vphysics-Project/runs/jgbx7suc' target=\"_blank\">https://wandb.ai/alejandro_c/Vphysics-Project/runs/jgbx7suc</a>"
+       " View run at <a href='https://wandb.ai/alejandro_c/Vphysics-Project/runs/l9k17u17' target=\"_blank\">https://wandb.ai/alejandro_c/Vphysics-Project/runs/l9k17u17</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2219,16 +2219,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 10 \t training loss: 0.11099084028747944 \t validation loss: 5.826135949293772\n",
-      "epoch: 20 \t training loss: 0.09545143137071828 \t validation loss: 5.859777935345968\n",
-      "epoch: 30 \t training loss: 0.09110349226744868 \t validation loss: 5.860901172955831\n",
-      "epoch: 40 \t training loss: 0.09300445101948772 \t validation loss: 6.033600191275279\n",
-      "epoch: 50 \t training loss: 0.12047874248258558 \t validation loss: 5.868782027562459\n",
-      "epoch: 60 \t training loss: 0.10370404753732204 \t validation loss: 6.127106980482737\n",
-      "epoch: 70 \t training loss: 0.08184196565560393 \t validation loss: 6.067840961615245\n",
-      "epoch: 80 \t training loss: 0.09657052991466845 \t validation loss: 5.864679356416066\n",
-      "epoch: 90 \t training loss: 0.08147750772547113 \t validation loss: 5.877435362339019\n",
-      "epoch: 100 \t training loss: 0.09377852803791839 \t validation loss: 5.878034019470215\n"
+      "epoch: 10 \t training loss: 0.12953590130459833 \t validation loss: 5.917361096541087\n",
+      "epoch: 20 \t training loss: 0.10598896071220548 \t validation loss: 5.888393954435984\n",
+      "epoch: 30 \t training loss: 0.09549990172218908 \t validation loss: 6.060744694868723\n",
+      "epoch: 40 \t training loss: 0.09498323340568435 \t validation loss: 5.916786054770152\n",
+      "epoch: 50 \t training loss: 0.10150537096993312 \t validation loss: 5.867965618769328\n",
+      "epoch: 60 \t training loss: 0.09074569520302991 \t validation loss: 5.988390950361888\n",
+      "epoch: 70 \t training loss: 0.08940355789372584 \t validation loss: 5.883792436122894\n",
+      "epoch: 80 \t training loss: 0.09444290406479752 \t validation loss: 5.861977521578471\n",
+      "epoch: 90 \t training loss: 0.08220357205558508 \t validation loss: 5.964687514305115\n",
+      "epoch: 100 \t training loss: 0.07535112621394638 \t validation loss: 5.860294775168101\n"
      ]
     },
     {
@@ -2246,7 +2246,7 @@
        "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
        "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
        "    </style>\n",
-       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>alpha</td><td>▇▆▇▆▇▇▇▇▇▇▅▆▄▆█▇▅▆▅█▇▅▃▆▇▅▇▇▆▅▇▅▁█▇▆█▇▆▇</td></tr><tr><td>beta</td><td>▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁</td></tr><tr><td>train_loss</td><td>█▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁</td></tr><tr><td>validation_loss</td><td>█▂▄▂▁▁▁▁▁▁▂▁▁▁▁▂▂▂▂▂▁▂▁▁▁▁▁▂▁▂▂▁▂▁▁ ▂▁▁▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>alpha</td><td>3.85421</td></tr><tr><td>beta</td><td>1.0</td></tr><tr><td>train_loss</td><td>0.09378</td></tr><tr><td>validation_loss</td><td>5.87803</td></tr></table><br/></div></div>"
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>alpha</td><td>▁▇████▇█████▇███████████████████████████</td></tr><tr><td>beta</td><td>▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁</td></tr><tr><td>train_loss</td><td>█▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁</td></tr><tr><td>validation_loss</td><td>█▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>alpha</td><td>3.94258</td></tr><tr><td>beta</td><td>1.0</td></tr><tr><td>train_loss</td><td>0.07535</td></tr><tr><td>validation_loss</td><td>5.86029</td></tr></table><br/></div></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2258,7 +2258,7 @@
     {
      "data": {
       "text/html": [
-       " View run <strong style=\"color:#cdcd00\">exp_EndPhys_15_03_24_14</strong> at: <a href='https://wandb.ai/alejandro_c/Vphysics-Project/runs/jgbx7suc' target=\"_blank\">https://wandb.ai/alejandro_c/Vphysics-Project/runs/jgbx7suc</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+       " View run <strong style=\"color:#cdcd00\">exp_EndPhys_18_03_24_14</strong> at: <a href='https://wandb.ai/alejandro_c/Vphysics-Project/runs/l9k17u17' target=\"_blank\">https://wandb.ai/alejandro_c/Vphysics-Project/runs/l9k17u17</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2270,7 +2270,7 @@
     {
      "data": {
       "text/html": [
-       "Find logs at: <code>./wandb/run-20240315_143551-jgbx7suc/logs</code>"
+       "Find logs at: <code>./wandb/run-20240318_140942-l9k17u17/logs</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2307,7 +2307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
