chnages general cnn olling and channels

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -10,16 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x218f245eb50>"
+       "<torch._C.Generator at 0x110e93d70>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -449,21 +449,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device: cuda\n"
+      "Using device: cpu\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "wandb version 0.16.6 is available!  To upgrade, please run:\n",
-       " $ pip install wandb --upgrade"
+       "Finishing last run (ID:2s60e895) before initializing another..."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -475,7 +474,12 @@
     {
      "data": {
       "text/html": [
-       "Tracking run with wandb version 0.16.2"
+       "<style>\n",
+       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
+       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
+       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
+       "    </style>\n",
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>alpha</td><td>▁</td></tr><tr><td>beta</td><td>▁</td></tr><tr><td>train_loss</td><td>▁</td></tr><tr><td>validation_loss</td><td>▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>alpha</td><td>1.0</td></tr><tr><td>beta</td><td>1.0</td></tr><tr><td>train_loss</td><td>18.97911</td></tr><tr><td>validation_loss</td><td>21.0499</td></tr></table><br/></div></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -487,7 +491,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>c:\\Users\\aleja\\Documents\\TUDelft\\Repository\\Vphys\\wandb\\run-20240412_022600-xg7sok1i</code>"
+       " View run <strong style=\"color:#cdcd00\">exp_EndPhys_29_04_24_15</strong> at: <a href='https://wandb.ai/alejandro_c/Vphysics-Project-IC/runs/2s60e895' target=\"_blank\">https://wandb.ai/alejandro_c/Vphysics-Project-IC/runs/2s60e895</a><br/> View project at: <a href='https://wandb.ai/alejandro_c/Vphysics-Project-IC' target=\"_blank\">https://wandb.ai/alejandro_c/Vphysics-Project-IC</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -499,7 +503,55 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/alejandro_c/Vphysics-Project-IC/runs/xg7sok1i' target=\"_blank\">exp_EndPhys_12_04_24_02</a></strong> to <a href='https://wandb.ai/alejandro_c/Vphysics-Project-IC' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+       "Find logs at: <code>./wandb/run-20240429_155332-2s60e895/logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Successfully finished last run (ID:2s60e895). Initializing new run:<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.16.6"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/Users/alejandro/Documents/Phd/Repositories/Own/Vphy/wandb/run-20240429_155749-7curm7j8</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/alejandro_c/Vphysics-Project-IC/runs/7curm7j8' target=\"_blank\">exp_EndPhys_29_04_24_15</a></strong> to <a href='https://wandb.ai/alejandro_c/Vphysics-Project-IC' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -523,7 +575,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/alejandro_c/Vphysics-Project-IC/runs/xg7sok1i' target=\"_blank\">https://wandb.ai/alejandro_c/Vphysics-Project-IC/runs/xg7sok1i</a>"
+       " View run at <a href='https://wandb.ai/alejandro_c/Vphysics-Project-IC/runs/7curm7j8' target=\"_blank\">https://wandb.ai/alejandro_c/Vphysics-Project-IC/runs/7curm7j8</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -536,11 +588,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial Loss \t training loss: 9.584479845487154 \t validation loss: 10.122562297185262\n",
-      "epoch: 5 \t training loss: 0.13634530586842825 \t validation loss: 1.8089690764745077\n",
-      "epoch: 10 \t training loss: 0.1047776534640596 \t validation loss: 1.9124580641587576\n",
-      "epoch: 15 \t training loss: 0.1073783502503023 \t validation loss: 1.5994578460852305\n"
+      "Initial Loss \t training loss: 18.412389160650463 \t validation loss: 19.259598350524904\n"
      ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "isnan(): argument 'input' (position 1) must be Tensor, not float",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m train_dataloader, test_dataloader, train_x, val_x  \u001b[38;5;241m=\u001b[39m loader\u001b[38;5;241m.\u001b[39mgetLoader(a,\u001b[38;5;28mtype\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMotion\u001b[39m\u001b[38;5;124m\"\u001b[39m, split \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m,  dt\u001b[38;5;241m=\u001b[39mdt_sim, nInFrames \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m,sr \u001b[38;5;241m=\u001b[39m sr ,  noise\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, shapeType\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msimple\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      6\u001b[0m latentEncoder \u001b[38;5;241m=\u001b[39m mainmodel\u001b[38;5;241m.\u001b[39mEndPhys(dt \u001b[38;5;241m=\u001b[39m dt, initw\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m----> 7\u001b[0m latentEncoder, train_losses, val_losses, accuracy_list  \u001b[38;5;241m=\u001b[39m \u001b[43mtrain\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlatentEncoder\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_dataloader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_dataloader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m../Results/Motion_Decoder\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mloss_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mlatent_loss\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/Phd/Repositories/Own/Vphy/src/train.py:216\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(model, train_loader, val_loader, name, type, loss_name)\u001b[0m\n\u001b[1;32m    212\u001b[0m         dict_log[name] \u001b[38;5;241m=\u001b[39m value[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mdetach()\u001b[38;5;241m.\u001b[39mcpu()\u001b[38;5;241m.\u001b[39mnumpy()\n\u001b[1;32m    214\u001b[0m wandb\u001b[38;5;241m.\u001b[39mlog(dict_log)\n\u001b[0;32m--> 216\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m np\u001b[38;5;241m.\u001b[39misnan(train_loss) \u001b[38;5;129;01mor\u001b[39;00m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43misnan\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_loss\u001b[49m\u001b[43m)\u001b[49m:\u001b[38;5;66;03m# or torch.isnan(val_loss):\u001b[39;00m\n\u001b[1;32m    218\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLoss is NaN! Epoch:\u001b[39m\u001b[38;5;124m\"\u001b[39m, epoch)\n\u001b[1;32m    219\u001b[0m     wandb\u001b[38;5;241m.\u001b[39mfinish()  \n",
+      "\u001b[0;31mTypeError\u001b[0m: isnan(): argument 'input' (position 1) must be Tensor, not float"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -551,23 +621,6 @@
     "train_dataloader, test_dataloader, train_x, val_x  = loader.getLoader(a,type=\"Motion\", split = True,  dt=dt_sim, nInFrames = 5,sr = sr ,  noise=False, shapeType='simple')\n",
     "latentEncoder = mainmodel.EndPhys(dt = dt, initw=True)\n",
     "latentEncoder, train_losses, val_losses, accuracy_list  = train.train(latentEncoder, train_dataloader, test_dataloader, '../Results/Motion_Decoder', loss_name='latent_loss')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2000,)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(val_x.shape)"
    ]
   },
   {
@@ -6325,7 +6378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.9"
   },
   "orig_nbformat": 4
  },
